--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apexcharts": "3.35.3",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "clsx": "^1.1.1",
     "context-api": "0.0.2",
     "date-fns": "2.28.0",
