--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.8.1",
     "@faker-js/faker": "^7.6.0",
+    "@mongodb-js/charts-embed-dom": "^2.3.0",
     "@mui/core": "5.0.0-alpha.54",
     "@mui/icons-material": "5.8.2",
     "@mui/lab": "5.0.0-alpha.84",
