--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
+  "extends": ["next", "plugin:prettier/recommended"],
   "rules": {
     "prettier/prettier": "off",
     "@next/next/no-img-element": "off",
